--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "ethers": "5.6.1",
     "jspdf": "^2.5.1",
     "leaflet": "^1.9.3",
+    "moment": "^2.29.4",
     "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
